Fix bug with column width and avoid overflow of text

--- a/app/assets/stylesheets/content/_work_packages_table_edit.sass
+++ b/app/assets/stylesheets/content/_work_packages_table_edit.sass
@@ -51,7 +51,13 @@
     cursor: pointer
 
 .work-package-table--container .generic-table tbody
-  td.-editable
-    padding-top: 0
-    padding-bottom: 0
-    display: table-cell
+  td
+    .wp-edit-field .-hidden-overflow
+      overflow: hidden
+      text-overflow: ellipsis
+    &.-editable
+      padding-top: 0
+      padding-bottom: 0
+      display: table-cell
+      width: auto
+
